Bug #1696 - Descending letters are cropped or too tight in group titles
Fix for Safari - one additional styling tweak

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2184,7 +2184,7 @@ body.membership-requests {
         .panel-body{
             padding: 2%;
             h6{
-                margin: 7px 0 12px;
+                margin: 7px 0 9px;
                 line-height: 1.2;
                 padding: 0 0 3px;
             }
